feat: commit working branch

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 config.properties
 #.venv
 .trunk
-__pycache__
+#__pycache__
 # Byte-compiled / optimized / DLL files
-__pycache__/
+##__pycache__/
 *.py[cod]
 *$py.class
 
